# wcpp

./: .gitignore  README.md  tool.sh
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cc
